Search icon alignment fix2

--- a/app/assets/stylesheets/catarse_bootstrap/_main.scss
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.scss
@@ -1813,8 +1813,8 @@ p {
   float: none;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
-  margin-top: 13px; 
 }
+#pg_search_submit .postfix { margin-top: 13px; }
 .prefix {
   display: inline-block;
   padding-top: 10px;
